Fix z-index in lightbox.

--- a/assets/css/bootstrap-lightbox.css
+++ b/assets/css/bootstrap-lightbox.css
@@ -1,5 +1,5 @@
 /*!
-* bootstrap-lightbox.css v0.7.0 
+* bootstrap-lightbox.css v0.7.0
 * Copyright 2014 Jason Butz
 * http://www.apache.org/licenses/LICENSE-2.0.txt
 */
@@ -19,7 +19,7 @@ body.lightbox-open,
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1040;
+  z-index: 1045;
   display: none;
   overflow: auto;
   overflow-y: scroll;
